// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  foo
</button>
`;

exports[`renders danger Button 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: red;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  Danger!
</button>
`;

exports[`renders primary Button 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  Primary
</button>
`;
